--- a/styles/styles.css
+++ b/styles/styles.css
@@ -589,6 +589,11 @@ video {
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
+.bg-cyan-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+}
+
 .text-center {
   text-align: center;
 }
