--- a/styles.css
+++ b/styles.css
@@ -1,133 +1,200 @@
 * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family: 'Kum Sans', sans-serif;
 }
 
-body {
-    margin: 0;
-    background-image: url('./assets/cp.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+.navbar{
+    background: #131313;
+    heightL 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: o;
+    z-index: 999;
 }
 
-.navbar {
+
+.navbar__containter{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color: white;
-    width: -webkit-fill-available;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0);
-    padding: 2% 4%;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+
+}   
+
+#navbar__logo{
+background-color: #ff8177;
+background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+background-size: 100%;
+-webkit-background-clip: text;
+-moz-background-clip: text;
+-webkit-text-fill-color: transparent;
+-moz-text-fill-color: transparent;
+display: flex;
+align-items: center;
+cursor: pointer;
+text-decoration: none;
+font-size: 2rem;
+
 }
 
-.logo {
-    width: 250px;
-    object-fit: contain;
-    object-position: center;
+.fa-gem{
+    margin-right: 0.5rem;
 }
 
-.search-bar {
-    width: 400px;
-    border-radius: 5px;
-    border: 1px solid black;
-    padding: 10px;
-    transition: all .3s;   
-}
-
-.search-bar:focus {
-    outline: none;
-    background-color: #0076b65d;
-}
-
-.nav-links {
+.navbar__menu{
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    list-style: none;
+    text-align: center;
 }
 
-.nav-links a {
-    font-family: 'Montserrat', sans-serif;
+.navbar__item{
+    height: 80px;
+}
+
+.navbar__links{
+color: #fff;
+display: flex;
+align-items: center;
+justify-content: center;
+text-decoration: none;
+padding: 0 1rem;
+height: 100%;
+}
+
+.navbar__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    width: 100%;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
-    color: black;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    transition: all .3s;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background: #f77062;
+    color: #fff;
 }
 
-.nav-links a:hover {
-    color: #0077b6;
+.button:hover{
+    background: #4837ff;
+    transition: all 0.4s ease;
 }
 
-.nav-links a:last-child {
-    padding: 2% 4%;
-    border: solid thin #0077b6;
-    transition: all .3s;
-    border-radius: 10px;
-    color: #0077b6;
-    font-weight: 700;
-    width: 150px;
-    text-align: center;
-    text-transform: unset;
+.navbar__links:hover{
+    color: #f77062;
+    transition: all 0.3s ease;
 }
 
-.nav-links a:last-child:hover {
-    background-color: #0077b6;
-    color: white;
-}
+@media screen and (max-width: 960px) {
+    .navbar__container{
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
+    }
 
-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+    .navbar__menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 0;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+    }
 
-.subscribe {
-    padding: 4% 4%;
-    background-color: white;
-}
+    .navbar__menu.active {
+        background: #131313;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6 rem;
+    }
 
-.subscribe button {
-    all: unset;
-    border: solid thin #0077b6;
-    padding: 2% 4%;
-    width: 25%;
-    text-align: center;
-    transition: all .3s;
-    font-weight: 700;
-    margin-top: 4%;
-}
+    #navbar__logo{
+        padding-left: 25px;
+    }
 
-.subscribe button:hover {
-    cursor: pointer;
-    background-color: #0077b6;
-}
+    .navbar__toggle.bar{
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: #fff;
+    }
 
-.subscribe input {
-    display: block;
-    width: -webkit-fill-available;
-    padding: 10px;
-    border: solid thin #0077b6;
-}
+    .navbar__item{
+        width: 100%;
+    }
 
-.subscribe input:focus {
-    outline: unset;
-    background-color: #0076b65d;
-}
+    .navbar__links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
 
-.about {
-    margin: 4% auto;
-    padding: 4% 4%;
-    background-color: white;
-    width: 80%;
-}
+    #mobile-menu{
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    
+    .navbar__btn {
+        padding-bottom: 2rem;
 
-.about h2 {
-    font-size: 2rem;
-    color: #444444;
-}
+    }
 
-.about p {
-    font-size: 1.2rem;
-    color: #444444;
+    .button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 80px;
+        margin: 0;
+    }
+
+    .navbar__toggle.bar{
+        display: block;
+        cursor: pointer;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
