--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 * {
-    font-family: 'Kum Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
     margin: 0;
-    background-image: url('./assets/cp.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: white;
 }
 
 .navbar {
@@ -26,16 +26,42 @@ body {
 }
 
 .search-bar {
-    width: 400px;
-    border-radius: 5px;
-    border: 1px solid black;
-    padding: 10px;
-    transition: all .3s;   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 1400px;
+    width: 40%;
+    border: solid thin black;
 }
 
-.search-bar:focus {
+.search-bar input {
+    width: -webkit-fill-available;
+    border-radius: 1400px;
+    transition: all .3s;   
+    border: none;
+    padding: 10px;
+    padding-left: 20px;
+}
+
+.search-bar input:focus {
     outline: none;
-    background-color: #0076b65d;
+}
+
+.search-bar i {
+    display: block;
+    height: -webkit-fill-available;
+    padding: 10px;
+    border-left: solid thin black;
+    transition: all .3s;
+    border-top-right-radius: 1400px;
+    border-bottom-right-radius: 1400px;
+    text-align: center;
+    width: 8%;
+}
+
+.search-bar i:hover {
+    color: #0077b6;
+    cursor: pointer;
 }
 
 .nav-links {
@@ -46,7 +72,6 @@ body {
 }
 
 .nav-links a {
-    font-family: 'Montserrat', sans-serif;
     text-decoration: none;
     color: black;
     font-size: 1.2rem;
@@ -59,10 +84,11 @@ body {
 }
 
 .nav-links a:last-child {
+    font-family: 'Montserrat', sans-serif;
     padding: 2% 4%;
     border: solid thin #0077b6;
     transition: all .3s;
-    border-radius: 10px;
+    border-radius: 1400px;
     color: #0077b6;
     font-weight: 700;
     width: 150px;
@@ -75,16 +101,23 @@ body {
     color: white;
 }
 
-section {
+.register {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.subscribe-c {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 80%;
 }
 
 .subscribe {
-    padding: 4% 4%;
+    padding: 1% 4%;
+    padding-bottom: 3%;
     background-color: white;
+    text-align: right;
 }
 
 .subscribe button {
@@ -116,10 +149,7 @@ section {
 }
 
 .about {
-    margin: 4% auto;
-    padding: 4% 4%;
-    background-color: white;
-    width: 80%;
+    margin: 4% 4%;
 }
 
 .about h2 {
